Added jurisdiction lookup function
